--- a/src/components/patient-testimonials/patient-testimonials.module.scss
+++ b/src/components/patient-testimonials/patient-testimonials.module.scss
@@ -127,6 +127,8 @@
                 background-size: cover;
                 &.prev{
                     rotate: -180deg;
+                    position: relative;
+                    top: 2px;
                 }
                 &[disabled]{
                     opacity: .5;
