--- a/src/components/sliding-card/sliding-card.module.scss
+++ b/src/components/sliding-card/sliding-card.module.scss
@@ -86,6 +86,8 @@
             background-size: cover;
             &.prev{
                 rotate: -180deg;
+                position: relative;
+                top: 2px;
             }
             &[disabled]{
                 opacity: .5;
